# rpminspect-data-rocky

./: .gitignore  AUTHORS  Makefile  README  centos.yaml  meson.build  rocky.yaml  rpminspect-centos  rpminspect-data-centos.spec.in  rpminspect-data-rocky.spec.in  rpminspect-rocky
.copr/: Makefile
abi/: centos6  centos7  rocky9
capabilities/: centos7  centos8  centos9  rocky8  rocky9
fileinfo/: centos3  centos4  centos5  centos6  centos7  centos8  centos9  rocky8  rocky9
icons/: centos8  rocky9
licenses/: centos.json
politics/: rocky9
profiles/centos/: centos-stream-9-devel.yaml  kernel.yaml  sig-hyperscale.yaml
profiles/rocky/: rocky-9-devel.yaml
rebaseable/: centos9  rocky9
security/: rocky9
utils/: mkrpmchangelog.sh  srpm.sh  submit-koji-builds.sh
